Made changes to the timetable and timetable-preview directives where they are made to be data-driven: it creates objects which then is used to create UI elements. It uses a lot of ng-repeat, etc.
Very good!!!!
Use this as a template for any future creation of directives!

--- a/src/Webpage/app/views/timetables.html
+++ b/src/Webpage/app/views/timetables.html
@@ -11,7 +11,7 @@
     <div id="overlayPanel">        
         <a class="closeButton" ng-click="closeTimetableViewer()">X</a>
         <div class="contentsPanel">
-            <timetable sessions="selectedTimetable" term="selectedTerm" colorScheme="sectionColors"></timetable>
+            <timetable blocks="selectedTimetable" colorScheme="sectionColors"></timetable>
             <!--<timetable blocks="selectedTimetable" term="Winter" colorScheme="sectionColors"></timetable>-->
         </div>
     </div>
