--- a/src/Webpage/app/views/courses.html
+++ b/src/Webpage/app/views/courses.html
@@ -1,36 +1,66 @@
 ﻿<div id="searchUoftCourses">
 	<!-- The header -->
-	<header><h1>Uoft Timetable Generator</h1></header>
+	<div id="header">
+        <h2>University of Toronto</h2>
+        <h1>Timetable Generator</h1>
+    </div>
 	
 	<!-- The search box -->
-	<div>
-		<input type="text" name="queryTxtbox" data-ng-model="query" ng-change="changeCourseResults()"/>
-		<div>
-			<div ng-repeat="course in courseResults"
-				 ng-click="selectCourse(course)">
-			{{course.code + " | " + course.term}}
-			</div>
-		</div>
+	<div id="searchArea">
+        <h4>Get your own personal timetable.</h4>
+		<input id="searchBox" type="text" placeholder="Enter a course code" 
+                     data-ng-model="query" ng-change="updateCourseResults(query)"/>
+        <div id="searchResults" ng-show="query.length >= 3">
+            <ul ng-show="courseResults.length > 0">
+                <li ng-repeat="course in courseResults | filter: query | filter: isCourseNotSelected" ng-click="selectCourse(course)">
+                    <span class="description">{{course.code + " (" + course.term + ")"}}</span>
+                    <span class="campus">{{course.campus}}</span>
+                </li>
+            </ul>
+        </div>
 	</div>
 
-	<!-- The fall courses selected -->
-	<div>
-		<table border="1">
-			<tr><td>Fall</td></tr>
-			<tr ng-repeat="course in fallCourses track by $index">
-				<td>{{course}}</td>
-			</tr>
-		</table>
-		<table border="1">
-			<tr><td>Winter</td></tr>
-			<tr ng-repeat="course in winterCourses track by $index">
-				<td>{{course}}</td>
-			</tr>
-		</table>
-	</div>
+    <!-- The courses that were displayed -->
+    <div ng-show="selectedCourses.length > 0">
+        <table id="selectedCoursesTable">
+            <thead>
+                <tr>
+                    <td class="column"><h3>Fall</h3></td>
+                    <td class="column"><h3>Winter</h3></td>
+                </tr>
+            </thead>
+            <tbody>               
+                <tr>
+                    <!-- Fall courses -->
+                    <td>
+                        <div class="selectedCoursePanel" ng-repeat="course in selectedCourses" ng-if="course.term === 'Fall' || course.term === 'Year'">
+                            <div>
+                                <span class="deleteCourseBttn">
+                                    <img src="../../images/cancel.png" height="14" width="14" ng-click="removeSelectedCourse(course)"/>
+                                </span>
+                                <span class="selectedCourse">{{course.code}}</span>
+                            </div>
+                        </div>
+                    </td>
+
+                    <!-- Winter/year courses-->
+                    <td>
+                        <div class="selectedCoursePanel" ng-repeat="course in selectedCourses" ng-if="course.term === 'Winter' || course.term === 'Year'">
+                            <div>
+                                <span class="deleteCourseBttn" ng-click="removeSelectedCourse(course)">
+                                    <img src="../../images/cancel.png" height="14" width="14" />
+                                </span>
+                                <span class="selectedCourse">{{course.code}}</span>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
 	<!-- The generate timetables button -->
-	<div>
-		<button ng-click="makeTimetables()">Generate timetables</button>
+	<div ng-show="selectedCourses.length > 0">
+		<button id="makeTimetablesBttn" ng-click="makeTimetables()">Generate timetables</button>
 	</div>
 </div>
