--- a/src/Webpage/app/templates/timetable-preview.template.html
+++ b/src/Webpage/app/templates/timetable-preview.template.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<span>
     <svg width="150" height="150" viewBox="0, 0, 150, 150">
         <g class="title">
             <text ng-attr-x="{{svgWidth / 2}}" 
@@ -29,4 +29,4 @@
             </rect>
         </g>
     </svg>
-</div>
+</span>
