Timetable viewer update
Added the ability to see Fall / Winter schedules of a yearly timetable

Moved the close button of the timetable viewer

Changed the color of the timetable viewer panel to be white

Changed the API where timetables returned will now contain a "name" attribute

What to work on:
add stats to each timetable
add bookmarks capability
make documentation
add the ability to restrict time / add external courses

--- a/src/Webpage/app/templates/timetable.template.html
+++ b/src/Webpage/app/templates/timetable.template.html
@@ -4,7 +4,7 @@
                   y="0" 
                   ng-attr-width="{{svgWidth}}" 
                   ng-attr-height="{{headerHeight}}"
-                  fill="grey">
+                  fill="white">
         </rect>
         <text ng-repeat="headerLabel in headerLabels"
               ng-attr-x="{{headerLabel.x}}"
@@ -21,7 +21,7 @@
                   y="0"
                   ng-attr-width="{{timesColumnWidth}}"
                   ng-attr-height="{{svgHeight}}"
-                  fill="grey">
+                  fill="white">
         </rect>
         <text ng-repeat="timeLabel in timeLabels"
                   ng-attr-x="{{timeLabel.x}}"
