--- a/src/Webpage/app/styles/timetable.css
+++ b/src/Webpage/app/styles/timetable.css
@@ -147,7 +147,7 @@
     overflow-y: auto;
 
     /* Set the background color */
-    background-color: rgba(0, 0, 0, 0.63);
+    background-color: rgba(0, 0, 0, 0.8);
 
     /* If the width / height changes, make it change for 2 seconds */
     -webkit-transition-property: width, height; /* For safari */
@@ -162,7 +162,8 @@
     margin-bottom: 5%;
     margin-left: 10%;
     margin-right: 10%;
-    background-color: green;
+    background-color: white;
+    padding: 10px;
     /*transition-duration: 0.3s;*/
 }
 
@@ -171,8 +172,40 @@
     position: absolute;
 
     /* Place it correctly */
-    right: 50px;
-    top: 50px;
+    right: 10px;
+
     /* Make the font big */
     font-size: 20px;
+}
+
+#timetableViewerHeaderPanel {
+    width: 100%;
+    padding-top: 1px;
+    padding-bottom: 10px;
+}
+
+#timetableViewerTitle{
+    padding-top: 10px;
+    text-align: center;
+}
+
+.leftViewerBttn {
+    margin-left: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.rightViewerBttn{
+    float: right;
+    padding-right: 20px;
+}
+
+#timetableViewerHeaderPanel .selected {
+    border-bottom-width: 1px;
+    border-bottom-color: blue;
+    border-bottom-style: solid;
+}
+
+#timetableViewerBody{
+    padding: 10px;
 }
