--- a/src/Webpage/app/views/timetables.html
+++ b/src/Webpage/app/views/timetables.html
@@ -9,8 +9,8 @@
         </div>
 
         <!-- The timetables; fall and winter timetables grouped together -->
-        <div class="miniTimetablesGroup" ng-repeat="timetable in timetables track by $index">
-            <div>{{"Timetable #" + $index}}</div>
+        <div class="miniTimetablesGroup" ng-repeat="timetable in timetables">
+            <div>{{timetable.name}}</div>
             <div class="miniTimetables">
                 <timetable-preview blocks="timetable.fallTimetableBlocks" colorScheme="sectionColors" chartTitle="Fall" ng-click="openTimetableViewer(timetable, 'Fall')"></timetable-preview>
                 <timetable-preview blocks="timetable.winterTimetableBlocks" colorScheme="sectionColors" chartTitle="Winter" ng-click="openTimetableViewer(timetable, 'Winter')"></timetable-preview>
@@ -18,7 +18,7 @@
         </div>        
 
         <div>
-            <button id="regenerateTimetablesBttn" ng-click="regenerateTimetables()">Regenerate more timetables</button>
+            <button id="regenerateTimetablesBttn" ng-click="generateTimetables()">Regenerate more timetables</button>
         </div>
 	</div>
 
@@ -42,9 +42,20 @@
 
     <!-- The overlay (where the timetable viewer will be placed) -->
     <div id="overlayPanel">        
-        <a class="closeButton" ng-click="closeTimetableViewer()">X</a>
         <div class="contentsPanel">
-            <timetable blocks="selectedTimetable" colorScheme="sectionColors"></timetable>
+            <div id="timetableViewerHeaderPanel">
+                <a class="closeButton" ng-click="closeTimetableViewer()">X</a>
+                <h2 id="timetableViewerTitle">{{selectedYearlyTimetable.name}}</h2>
+                <span class="leftViewerBttn" ng-if="selectedTerm != 'Fall'" ng-click="changeTermInTimetableViewer('Fall')">Fall</span>
+                <span class="leftViewerBttn selected" ng-if="selectedTerm === 'Fall'" ng-click="changeTermInTimetableViewer('Fall')">Fall</span>
+                <span class="leftViewerBttn" ng-if="selectedTerm != 'Winter'" ng-click="changeTermInTimetableViewer('Winter')">Winter</span>
+                <span class="leftViewerBttn selected" ng-if="selectedTerm === 'Winter'" ng-click="changeTermInTimetableViewer('Winter')">Winter</span>
+                <span class="rightViewerBttn">Bookmark</span>
+                <span class="rightViewerBttn">Edit</span>
+            </div>
+            <div id="timetableViewerBody">
+                <timetable blocks="selectedTimetableBlocks" colorScheme="sectionColors"></timetable>
+            </div>
             <!--<timetable blocks="selectedTimetable" term="Winter" colorScheme="sectionColors"></timetable>-->
         </div>
     </div>
