Added more things in the Timetables page
Added the ability to print timetables
Able to bookmark and review saved timetables

What to work on:
work on the restrictions and the preferences filters

--- a/src/Webpage/app/templates/timetable-preview.template.html
+++ b/src/Webpage/app/templates/timetable-preview.template.html
@@ -1,5 +1,5 @@
 ﻿<span>
-    <svg width="150" height="150" viewBox="0, 0, 150, 150">
+    <svg width="150" height="150" viewBox="0, 0, 150, 150" class="hoverable clickable">
         <g class="title">
             <text ng-attr-x="{{svgWidth / 2}}" 
                       ng-attr-y="{{headerHeight}}"
