--- a/src/Webpage/app/styles/timetable.css
+++ b/src/Webpage/app/styles/timetable.css
@@ -6,6 +6,14 @@
     margin-bottom: 0px;
 }
 
+.hoverable:hover {
+    background-color: rgba(132, 132, 132, 0.21);
+}
+
+.clickable:hover{
+    cursor: pointer;
+}
+
 #miniTimetablesViewer {
     /* Show the vertical scrollbar when it is too big */
     overflow-y: auto;
@@ -31,14 +39,37 @@
 .headerSides {
     float: left;
     text-align: left;
-    width: 20%;
+    margin-right: 5%;
     margin-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #header {
-    width: 80%;
-    margin-right: calc(20% + 20px);
+    width: 95%;
+    margin-right: calc(5% + 20px);
     font-size: 1.5em;
+}
+
+#bodyPanel{
+    width: auto;
+}
+
+#midHeaderPanel{
+    width: 100%;
+    text-align: right;
+}
+
+.mid-header-panel-bttn {
+    padding: 5px 5px 5px 5px;
+    border-radius: 4px;
+    display: inline-block;
+}
+
+#restrictionsBttn{
+    margin-right: 50px;
 }
 
 .miniTimetablesGroup {
@@ -103,6 +134,10 @@
     margin-right: 20px;
 }
 
+.menuItem h3{
+    margin-bottom: 5px;
+}
+
 .section{
     margin-top: 5px;
     margin-bottom: 5px;
@@ -128,6 +163,17 @@
     display: inline-block;
     height: 100%;
     vertical-align: middle;
+}
+
+.bookmarkedTimetable {
+    display: block;
+    margin-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100%;
+    text-align: left;
 }
 
 #overlayPanel {
@@ -176,6 +222,13 @@
 
     /* Make the font big */
     font-size: 20px;
+
+    /* Add some padding */
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 4px;
 }
 
 #timetableViewerHeaderPanel {
@@ -189,15 +242,27 @@
     text-align: center;
 }
 
+.viewerBttn {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .leftViewerBttn {
     margin-left: 15px;
     padding-left: 15px;
     padding-right: 15px;
 }
 
-.rightViewerBttn{
+#printBttn {
     float: right;
-    padding-right: 20px;
+    margin-right: 10px;
+}
+
+#bookmarkBttn {
+    float: right;
+    margin-right: 20px;
 }
 
 #timetableViewerHeaderPanel .selected {
