Placed the Restrictions Panel into its own component
What to work on:
The UI for the restrictions panel
Place the Course List Selection into its own component
Work on the backend and how it can generate custom timetables based on the restrictions / preferences.

--- a/src/Webpage/app/views/timetables.html
+++ b/src/Webpage/app/views/timetables.html
@@ -18,45 +18,12 @@
                 <span id="restrictionsBttn" class="mid-header-panel-bttn hoverable clickable"
                             ng-click="toggleRestrictionsPanel()">Restrictions</span>
 
-                <!--
-                <div id="preferencesPanel" ng-if="isPreferencesPanelOpened">
-                    <span>
-                        Get the least amount of time between classes
-                        <input type="range" min="0" max="100" />
-                    </span>
-                    <span>
-                        Get the least amount of time between classes
-                        <input type="range" min="0" max="100" />
-                    </span>
-                    
-                    <input type="range" min="0" max="100" />
-                    <input type="range" min="0" max="100" />
-                </div>
-                <div id="restrictionsPanel" ng-if="isRestrictionsPanelOpened">
-                    <div class="property">
-                        <span>Max. walk time in back-to-back classes</span>
-                        <span>
-                            <input type="range" min="0" max="20" value="10" ng-model="maxWalkingTime"/>
-                            <span>{{maxWalkingTime + " minutes"}}</span>
-                        </span>
-                    </div>
-                    <div class="property">
-                        <span>Earliest class time</span>
-                        <span>
-                            <input type="range" min="7" max="22" value="9" ng-model="earliestClassTime" />
-                            <span>{{earliestClassTime + ":00"}}</span>
-                        </span>
-                    </div>
-                    <div class="property">
-                        <span>Latest class time</span>
-                        <span>
-                            <input type="range" min="7" max="22" value="18" ng-model="latestClassTime" />
-                            <span>{{latestClassTime + ":00"}}</span>
-                        </span>
-                    </div>
-                </div>
-                    -->
-                <preferences-panel ng-if="isPreferencesPanelOpened" initial-preference="initPref" 
+                <restrictions-panel ng-if="isRestrictionsPanelOpened" initial-restrictions="initRes"
+                                                   on-update="updateRestrictions(restrictions)"
+                                                   on-cancel="toggleRestrictionsPanel()"></restrictions-panel>
+
+               
+                <preferences-panel ng-if="isPreferencesPanelOpened" initial-preferences="initPref" 
                                                     on-update="updatePreferences(preferences)"
                                                     on-cancel="togglePreferencesPanel()"></preferences-panel>
             </div>
